samples/_failures_safe/1761507750_cd730f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3730632a.c: In function ‘main’:
./samples/SAFE/__tmp_3730632a.c:163:5: error: expected declaration or statement at end of input
  163 |     int choice;
      |     ^~~
